@@ -1,3 +1,8 @@
+2008-09-25  Michael Wiegand <michael.wiegand@intevation.de>
+
+	* openvasd/oval_plugins.c: Added notice regarding running ovaldi with
+	reduced privileges.
+
 2008-09-23  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
 
 	* openvasd/comm.c (comm_init):  Removed setting of scan_ids
